<resources>
    <string name="app_name">NUMAD23Sp_ParthKhaladkar</string>
    <string name="about_me_info">Name: Parth Khaladkar\nEmail: khaladkar.p@northeastern.edu</string>
    <string name="convert_about">About Me</string>
    <string name="covert_second">Clicky</string>
    <string name="convert_a">A</string>
    <string name="convert_b">B</string>
    <string name="convert_c">C</string>
    <string name="convert_d">D</string>
    <string name="convert_e">E</string>
    <string name="convert_f">F</string>
    <string name="convert_pressed">Pressed</string>
    <string name="convert_collector">Link Collector</string>
    <string name="button_info">floatingButton</string>


    <string name="desc">floatingButton</string>
    <string name="link_collector">LINK COLLECTOR</string>
    <string name="link_details">Enter Link Details</string>
    <string name="link_name">Name:</string>
    <string name="link_url">Url:</string>
    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>
    <string name="link_add_success">Link addition successful</string>
    <string name="invalid_link">Invalid url</string>
    <string name="NameValuePair">Name: %1$s</string>
    <string name="UrlValuePair">Url: %1$s</string>
    <string name="Http">http://</string>


    <string name="prime_button">Find Prime</string>
    <string name="find_primes">Find Primes</string>
    <string name="terminate_search">Terminate Search</string>
    <string name="pacifier_button">Pacifier Switch</string>
    <string name="back_prompt">Do you want to Quit ?</string>




    
</resources>