<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">


    <Button
        android:id="@+id/buttonA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/convert_a"
        app:layout_constraintBottom_toTopOf="@+id/btnD"
        app:layout_constraintEnd_toStartOf="@+id/btnB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2" />

    <Button
        android:id="@+id/btnB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/convert_b"
        app:layout_constraintBottom_toTopOf="@+id/btnE"
        app:layout_constraintEnd_toStartOf="@id/btnC"
        app:layout_constraintStart_toEndOf="@id/buttonA"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2" />

    <Button
        android:id="@+id/btnC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/convert_c"
        app:layout_constraintBottom_toTopOf="@+id/btnF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnB"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2" />

    <Button
        android:id="@+id/btnD"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/convert_d"
        app:layout_constraintBottom_toTopOf="@+id/textViewPressed"
        app:layout_constraintEnd_toStartOf="@+id/btnE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonA"
        app:layout_constraintWidth_percent="0.2" />

    <Button
        android:id="@+id/btnE"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/convert_e"
        app:layout_constraintBottom_toTopOf="@+id/textViewPressed"
        app:layout_constraintEnd_toStartOf="@+id/btnF"
        app:layout_constraintStart_toEndOf="@+id/btnD"
        app:layout_constraintTop_toBottomOf="@id/btnB"
        app:layout_constraintWidth_percent="0.2" />

    <Button
        android:id="@+id/btnF"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/convert_f"
        app:layout_constraintBottom_toTopOf="@+id/textViewPressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnE"
        app:layout_constraintTop_toBottomOf="@id/btnC"
        app:layout_constraintWidth_percent="0.2" />

    <TextView
        android:id="@+id/textViewPressed"
        android:layout_width="105dp"
        android:layout_height="30dp"
        android:freezesText="true"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnE"
        app:layout_constraintWidth_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>